# builddy

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  architecture.md  docker-compose.yml  railway.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
autopsy-backend/: .env.example  Dockerfile  config.py  database.py  main.py  pyproject.toml  requirements.txt
autopsy-backend/agent/: executor.py  forensic.py  reviver.py  tools.py
backend/: .dockerignore  .env.example  Dockerfile  config.py  coverage.json  database.py  dump.txt  main.py  models.py  pyproject.toml  rate_limiter.py  requirements.txt  test_twitter_login.py
backend/.hermes/plans/: 2026-04-08_160411-now-what-features-we-can-implement-to-make.md
backend/agent/: __init__.py  agents.py  autopilot.py  components.py  helpers.py  llm.py  multifile.py  pipeline.py  prompts.py  steps.py  test_gen.py
backend/data/: build_templates.json
backend/routers/: __init__.py  builds.py  discord.py  gallery.py  prompts.py  twitter.py
backend/services/: __init__.py  build_tools.py  cloud_deploy.py  deployer.py  event_bus.py  post_deploy_hooks.py  process_manager.py  twitter.py  twitter_scraper.py  visual_validator.py
backend/tests/: conftest.py  test_agent_helpers.py  test_agents.py  test_autopilot.py  test_builds_api.py  test_builds_endpoints.py  test_builds_extended.py  test_builds_extra.py  test_builds_more.py  test_cloud_deploy.py  test_cloud_deploy_coverage.py  test_cloud_deploy_extended.py  test_config.py  test_database.py  test_deployer.py  test_event_bus.py  test_gallery.py  test_helpers.py  test_llm.py  test_llm_coverage.py  test_llm_extended.py  test_main.py  test_mention_model.py  test_models.py  test_multifile.py  test_multifile_classify.py  test_pipeline.py  test_pipeline_extended.py  test_pipeline_integration.py  test_process_manager.py  test_process_manager_extended.py  test_prompts.py  test_prompts_router.py  test_rate_limiting.py  test_screenshot_pipeline_autopilot.py  test_steps.py  test_test_gen.py  test_visual_validator.py
docs/: api-reference.md  architecture.md  deployment.md  testing.md
docs/plans/: 2026-04-05-builddy-differentiators-design.md  2026-04-05-multi-file-fullstack-generation.md
frontend/: .dockerignore  .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/e2e/: gallery.spec.ts  homepage.spec.ts
frontend/src/__tests__/: AgentSteps.test.tsx  AppPreview.test.tsx  CodePreview.test.tsx  FileExplorer.test.tsx  StatusBadge.test.tsx  api.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/autopsy/: page.tsx
frontend/src/app/embed/: EmbedForm.tsx  page.tsx
frontend/src/app/gallery/: page.tsx
frontend/src/app/pipeline-designer/: page.tsx
frontend/src/components/: AgentSteps.tsx  AppPreview.tsx  AuthButton.tsx  BuildCard.tsx  BuildErrorRecovery.tsx  BuildFeed.tsx  BuildHeader.tsx  CloudDeployButton.tsx  CodeEditor.tsx  CodePreview.tsx  ErrorDisplay.tsx  FileExplorer.tsx  GitHubRepoPicker.tsx  ModifyForm.tsx  PipelineDesigner.tsx  RemixButton.tsx  StatusBadge.tsx  SubmitBuild.tsx  ThemeToggle.tsx  VersionHistory.tsx
frontend/src/hooks/: useBuild.ts
frontend/src/lib/: api.ts  buildCheckpoint.ts  pipeline-types.ts  types.ts
(+6 files in other folders)
