[project]
name = "builddy-backend"
version = "0.1.0"
description = "Builddy API - AI app builder powered by GLM"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.1.0",
    "playwright>=1.58.0",
    "sse-starlette>=3.3.4",
    "slowapi>=0.1.9",
]
